<resources>
    <string name="app_name">CommodityManagerment</string>
    <string name="app_name_china">商品管理系统</string>
    <string name="loading">正在加载</string>

    <!--商品信息-->
    <string name="goods_name">商品名称</string>
    <string name="goods_count">商品数目</string>
    <string name="goods_describe">商品描述</string>
    <string name="goods_category">商品种类</string>
    <string name="goods_img">商品图片</string>
    <string name="goods_original_price">商品原价</string>
    <string name="goods_present_price">商品现价</string>


    <!--用户信息-->
    <string name="user_name">用户名称</string>
    <string name="user_nick_name">用户昵称</string>
    <string name="user_modify_nick_name">修改昵称</string>
    <string name="user_permission">用户权限</string>
    <string name="user_modify_password">修改用户密码</string>
    <string name="user_logout">退出当前账号</string>

    <!--商品种类-->
    <string name="category_hot">火爆</string>
    <string name="category_new_product">新品</string>
    <string name="category_promotion">促销</string>
    <string name="category_activity">活动</string>
    <string name="category_out_of_stock">缺货</string>


    <!--删除商品-->
    <string name="goods_delete_tip">此操作将会删除商品，请您谨慎行之</string>
    <string name="goods_delete_ok">确定</string>
    <string name="goods_delete_cancel">取消</string>

    <!--首页底部自定义布局-->
    <declare-styleable name="IndexBottomLayout">
        <attr name="iconSrc" format="reference" />
        <attr name="iconWidth" format="dimension" />
        <attr name="iconHeight" format="dimension" />
        <attr name="title" format="string" />

    </declare-styleable>

    <!--自定义ImageView样式-->
    <declare-styleable name="ShapedImageView">
        <attr name="shape_mode" format="enum">
            <enum name="round_rect" value="1" />
            <enum name="circle" value="2" />
        </attr>
        <attr name="round_radius" format="dimension" />
    </declare-styleable>


</resources>
